objects/advpm__Budget__c.object
<CustomObject>
    <fields>
        <fullName>advpm__Actual_Budget__c</fullName>
        <inlineHelpText>Adding Summary or Detail Budgets will automatically calculate this field.</inlineHelpText>
        <label>Allocated Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Budget_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__End_Date__c</fullName>
        <formula>DATEVALUE(TEXT(advpm__End_Year__c) &amp; &quot;-&quot; &amp; CASE( TEXT(advpm__End_Month__c) , &quot;Jan&quot;, &quot;01&quot;, &quot;Feb&quot;, &quot;02&quot;, &quot;Mar&quot;, &quot;03&quot;, &quot;Apr&quot;, &quot;04&quot;, &quot;May&quot;, &quot;05&quot;, &quot;Jun&quot;, &quot;06&quot;, &quot;Jul&quot;, &quot;07&quot;, &quot;Aug&quot;, &quot;08&quot;, &quot;Sep&quot;, &quot;09&quot;, &quot;Oct&quot;, &quot;10&quot;, &quot;Nov&quot;, &quot;11&quot;, &quot;Dec&quot;, &quot;12&quot;, &quot;01&quot;) &amp; &quot;-&quot; &amp; CASE( TEXT(advpm__End_Month__c) , &quot;Jan&quot;, &quot;31&quot;, &quot;Feb&quot;, IF( MOD( VALUE(TEXT(advpm__End_Year__c)), 4) = 0, &quot;29&quot;, &quot;28&quot;), &quot;Mar&quot;, &quot;31&quot;, &quot;Apr&quot;, &quot;30&quot;, &quot;May&quot;, &quot;31&quot;, &quot;Jun&quot;, &quot;30&quot;, &quot;Jul&quot;, &quot;31&quot;, &quot;Aug&quot;, &quot;31&quot;, &quot;Sep&quot;, &quot;30&quot;, &quot;Oct&quot;, &quot;31&quot;, &quot;Nov&quot;, &quot;30&quot;, &quot;Dec&quot;, &quot;31&quot;, &quot;30&quot;))</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__End_Month__c</fullName>
        <label>End Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                    <default>true</default>
                    <label>Jan</label>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__End_Year__c</fullName>
        <label>End Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                    <default>true</default>
                    <label>2012</label>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Expense_Budget__c</fullName>
        <inlineHelpText>Adding Summary or Detail Budgets will automatically calculate this field.</inlineHelpText>
        <label>Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Fee_Budget__c</fullName>
        <inlineHelpText>Adding Summary or Detail Budgets will automatically calculate this field.</inlineHelpText>
        <label>Fee Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Hours_Estimate__c</fullName>
        <label>Hours Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Budget_Lock__c</fullName>
        <formula>IF ( advpm__Matter__r.advpm__Lock_Budgets__c , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <label>Matter Budget Lock</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Legal_Hold__c</fullName>
        <formula>IF ( advpm__Matter__r.advpm__Legal_Hold__c , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <label>Matter Legal Hold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter__c</fullName>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>advpm__Start_Date__c</fullName>
        <formula>DATEVALUE(TEXT(advpm__Start_Year__c) &amp; &quot;-&quot; &amp; CASE( TEXT(advpm__Start_Month__c) , &quot;Jan&quot;, &quot;01&quot;, &quot;Feb&quot;, &quot;02&quot;, &quot;Mar&quot;, &quot;03&quot;, &quot;Apr&quot;, &quot;04&quot;, &quot;May&quot;, &quot;05&quot;, &quot;Jun&quot;, &quot;06&quot;, &quot;Jul&quot;, &quot;07&quot;, &quot;Aug&quot;, &quot;08&quot;, &quot;Sep&quot;, &quot;09&quot;, &quot;Oct&quot;, &quot;10&quot;, &quot;Nov&quot;, &quot;11&quot;, &quot;Dec&quot;, &quot;12&quot;, &quot;01&quot;) &amp; &quot;-&quot; &amp; &quot;01&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Start_Month__c</fullName>
        <label>Start Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                    <default>true</default>
                    <label>Jan</label>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Start_Year__c</fullName>
        <label>Start Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                    <default>true</default>
                    <label>2012</label>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Re-Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Total_Budget__c</fullName>
        <formula>advpm__Expense_Budget__c +  advpm__Fee_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>advpm__All</fullName>
        <columns>NAME</columns>
        <columns>advpm__Firm__c</columns>
        <columns>advpm__Matter__c</columns>
        <columns>advpm__Start_Date__c</columns>
        <columns>advpm__Expense_Budget__c</columns>
        <columns>advpm__Fee_Budget__c</columns>
        <columns>advpm__End_Date__c</columns>
        <columns>advpm__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000000}</displayFormat>
        <label>Budget Ref #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <recordTypes>
        <fullName>advpm__Budget</fullName>
        <active>true</active>
        <label>Fee And Expense Budget</label>
    </recordTypes>
    <recordTypes>
        <fullName>advpm__Hours_Budget</fullName>
        <active>true</active>
        <label>Resource Hours Budget</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>advpm__Start_Date_should_be_before_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>advpm__End_Date__c  &lt;=  advpm__Start_Date__c</errorConditionFormula>
        <errorMessage>Start Date must be greater than the End Date</errorMessage>
    </validationRules>
</CustomObject>